no.6/toi1/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI

   3  expr : LET var EQ expr IN expr
   4       | IF expr THEN expr ELSE expr
   5       | FUN var ARROW expr
   6       | arith_expr EQ arith_expr
   7       | arith_expr LT arith_expr
   8       | arith_expr

   9  arith_expr : arith_expr PLUS factor_expr
  10             | arith_expr MINUS factor_expr
  11             | factor_expr

  12  factor_expr : factor_expr TIMES app_expr
  13              | factor_expr DIV app_expr
  14              | app_expr

  15  app_expr : app_expr atomic_expr
  16           | atomic_expr

  17  atomic_expr : INT
  18              | BOOL
  19              | ID
  20              | LPAR expr RPAR

  21  var : ID

  22  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	toplevel  goto 10
	expr  goto 11
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (17)

	.  reduce 17


state 4
	atomic_expr : BOOL .  (18)

	.  reduce 18


state 5
	atomic_expr : ID .  (19)

	.  reduce 19


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 16
	.  error

	var  goto 17


state 7
	expr : IF . expr THEN expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 19
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 8
	atomic_expr : LPAR . expr RPAR  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 20
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 9
	expr : FUN . var ARROW expr  (5)

	ID  shift 16
	.  error

	var  goto 21


state 10
	%entry% : '\001' toplevel .  (22)

	.  reduce 22


state 11
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 22
	.  error


state 12
	expr : arith_expr . EQ arith_expr  (6)
	expr : arith_expr . LT arith_expr  (7)
	expr : arith_expr .  (8)
	arith_expr : arith_expr . PLUS factor_expr  (9)
	arith_expr : arith_expr . MINUS factor_expr  (10)

	PLUS  shift 23
	MINUS  shift 24
	EQ  shift 25
	LT  shift 26
	IN  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	RPAR  reduce 8
	SEMISEMI  reduce 8


state 13
	arith_expr : factor_expr .  (11)
	factor_expr : factor_expr . TIMES app_expr  (12)
	factor_expr : factor_expr . DIV app_expr  (13)

	TIMES  shift 27
	DIV  shift 28
	IN  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQ  reduce 11
	LT  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	SEMISEMI  reduce 11


state 14
	factor_expr : app_expr .  (14)
	app_expr : app_expr . atomic_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 14
	PLUS  reduce 14
	TIMES  reduce 14
	MINUS  reduce 14
	DIV  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	SEMISEMI  reduce 14

	atomic_expr  goto 29


state 15
	app_expr : atomic_expr .  (16)

	.  reduce 16


state 16
	var : ID .  (21)

	.  reduce 21


state 17
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 30
	.  error


state 18
	expr : LET . var EQ expr IN expr  (3)

	ID  shift 16
	.  error

	var  goto 31


state 19
	expr : IF expr . THEN expr ELSE expr  (4)

	THEN  shift 32
	.  error


state 20
	atomic_expr : LPAR expr . RPAR  (20)

	RPAR  shift 33
	.  error


state 21
	expr : FUN var . ARROW expr  (5)

	ARROW  shift 34
	.  error


state 22
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 23
	arith_expr : arith_expr PLUS . factor_expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 35
	app_expr  goto 14
	atomic_expr  goto 15


state 24
	arith_expr : arith_expr MINUS . factor_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 36
	app_expr  goto 14
	atomic_expr  goto 15


state 25
	expr : arith_expr EQ . arith_expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 37
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 26
	expr : arith_expr LT . arith_expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 38
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 27
	factor_expr : factor_expr TIMES . app_expr  (12)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 39
	atomic_expr  goto 15


state 28
	factor_expr : factor_expr DIV . app_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 40
	atomic_expr  goto 15


state 29
	app_expr : app_expr atomic_expr .  (15)

	.  reduce 15


state 30
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 41
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 31
	expr : LET var . EQ expr IN expr  (3)

	EQ  shift 42
	.  error


state 32
	expr : IF expr THEN . expr ELSE expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 43
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 33
	atomic_expr : LPAR expr RPAR .  (20)

	.  reduce 20


state 34
	expr : FUN var ARROW . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 44
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 35
	arith_expr : arith_expr PLUS factor_expr .  (9)
	factor_expr : factor_expr . TIMES app_expr  (12)
	factor_expr : factor_expr . DIV app_expr  (13)

	TIMES  shift 27
	DIV  shift 28
	IN  reduce 9
	PLUS  reduce 9
	MINUS  reduce 9
	EQ  reduce 9
	LT  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	RPAR  reduce 9
	SEMISEMI  reduce 9


state 36
	arith_expr : arith_expr MINUS factor_expr .  (10)
	factor_expr : factor_expr . TIMES app_expr  (12)
	factor_expr : factor_expr . DIV app_expr  (13)

	TIMES  shift 27
	DIV  shift 28
	IN  reduce 10
	PLUS  reduce 10
	MINUS  reduce 10
	EQ  reduce 10
	LT  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	SEMISEMI  reduce 10


state 37
	expr : arith_expr EQ arith_expr .  (6)
	arith_expr : arith_expr . PLUS factor_expr  (9)
	arith_expr : arith_expr . MINUS factor_expr  (10)

	PLUS  shift 23
	MINUS  shift 24
	IN  reduce 6
	THEN  reduce 6
	ELSE  reduce 6
	RPAR  reduce 6
	SEMISEMI  reduce 6


state 38
	expr : arith_expr LT arith_expr .  (7)
	arith_expr : arith_expr . PLUS factor_expr  (9)
	arith_expr : arith_expr . MINUS factor_expr  (10)

	PLUS  shift 23
	MINUS  shift 24
	IN  reduce 7
	THEN  reduce 7
	ELSE  reduce 7
	RPAR  reduce 7
	SEMISEMI  reduce 7


state 39
	factor_expr : factor_expr TIMES app_expr .  (12)
	app_expr : app_expr . atomic_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 12
	PLUS  reduce 12
	TIMES  reduce 12
	MINUS  reduce 12
	DIV  reduce 12
	EQ  reduce 12
	LT  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	SEMISEMI  reduce 12

	atomic_expr  goto 29


state 40
	factor_expr : factor_expr DIV app_expr .  (13)
	app_expr : app_expr . atomic_expr  (15)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	IN  reduce 13
	PLUS  reduce 13
	TIMES  reduce 13
	MINUS  reduce 13
	DIV  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	SEMISEMI  reduce 13

	atomic_expr  goto 29


state 41
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 45
	SEMISEMI  shift 46
	.  error


state 42
	expr : LET var EQ . expr IN expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 47
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 43
	expr : IF expr THEN expr . ELSE expr  (4)

	ELSE  shift 48
	.  error


state 44
	expr : FUN var ARROW expr .  (5)

	.  reduce 5


state 45
	expr : LET var EQ expr IN . expr  (3)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 49
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 46
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 47
	expr : LET var EQ expr . IN expr  (3)

	IN  shift 45
	.  error


state 48
	expr : IF expr THEN expr ELSE . expr  (4)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 18
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 50
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 49
	expr : LET var EQ expr IN expr .  (3)

	.  reduce 3


state 50
	expr : IF expr THEN expr ELSE expr .  (4)

	.  reduce 4


22 terminals, 9 nonterminals
23 grammar rules, 51 states
